// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Messages A message is removed if the modal is closed 1`] = `
.emotion-0 {
  position: fixed;
  width: 80%;
  max-width: 800px;
  top: 50px;
  left: 0;
  right: 0;
  z-index: 200;
  margin: 0 auto;
}

.emotion-1 {
  position: fixed;
  inset: 0;
  background: rgba(1, 1, 1, 0.3);
  z-index: 100;
}

.emotion-3 {
  position: fixed;
  inset: 0;
  overflow: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  z-index: 100;
}

.emotion-5 {
  --margin: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  max-height: 85%;
  max-width: 95%;
  overflow-y: auto;
  background-color: #fff;
  padding-bottom: env(safe-area-inset-bottom);
  padding-top: env(safe-area-inset-top);
  padding-left: env(safe-area-inset-left);
  padding-right: env(safe-area-inset-right);
}

@media (min-width: 37.5625em) {
  .emotion-5[data-margin='small'] {
    --margin: 26px;
  }
}

.emotion-5[data-position='top'] {
  top: var(--margin);
  bottom: unset;
}

.emotion-5[data-position='bottom'] {
  bottom: var(--margin);
  top: unset;
}

.emotion-5[data-position='left'] {
  left: var(--margin);
  right: unset;
}

.emotion-5[data-position='right'] {
  right: var(--margin);
  left: unset;
}

.emotion-5[data-size='full'] {
  min-height: 100%;
  min-width: 100%;
  inset: 0;
}

.emotion-5[data-width='xsmall'],
.emotion-5[data-size='xsmall'] {
  width: 300px;
}

.emotion-5[data-width='small'],
.emotion-5[data-size='small'] {
  width: 500px;
}

.emotion-5[data-width='normal'],
.emotion-5[data-size='normal'] {
  width: 700px;
}

.emotion-5[data-width='large'],
.emotion-5[data-size='large'] {
  width: 1100px;
}

.emotion-5[data-width='full'] {
  width: 100%;
  min-width: 100%;
  left: 0;
  right: 0;
}

.emotion-5[data-height='xsmall'] {
  height: 300px;
}

.emotion-5[data-height='small'] {
  height: 500px;
}

.emotion-5[data-height='normal'] {
  height: 700px;
}

.emotion-5[data-height='large'] {
  height: 1100px;
}

.emotion-5[data-height='full'] {
  height: 100%;
  min-height: 100%;
  top: 0;
  bottom: 0;
}

.emotion-5[data-expands='true'] {
  width: unset;
  height: unset;
  max-width: 100%;
  max-height: 100%;
}

@media (max-width: 37.5625em) {
  .emotion-5 {
    min-width: 100%;
    min-height: 100%;
  }
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 26px;
  padding: 26px;
  background-color: #d1372e;
  color: white;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding: 26px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-7 h1 {
  margin: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 700;
  font-size: 22px;
  font-size: 1.2222222222222223rem;
  line-height: 1.2;
  color: #444;
}

.emotion-7 h1[lang='zh'],
.emotion-7 h1[lang='zh-Hans'],
.emotion-7 h1[lang='zh-Hant'] {
  font-size: calc(22px * 1.11);
  font-size: calc(1.2222222222222223rem * 1.11);
}

.emotion-7 h1 {
  color: #fff;
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0;
  color: #fff;
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6.5px;
  color: #20588f;
  background: #deebf6;
  border: 2px solid #deebf6;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4.333333333333333px 6.5px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #20588f;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6.5px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
  margin-left: auto;
  color: #fff;
  justify-self: flex-end;
}

.emotion-10:hover,
.emotion-10:focus-visible {
  color: #fff;
  background-color: #20588f;
  border-color: #20588f;
}

.emotion-10[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-10[lang='zh'],
.emotion-10[lang='zh-Hans'],
.emotion-10[lang='zh-Hant'] {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-10:hover,
.emotion-10:active,
.emotion-10:focus-visible {
  color: #20588f;
  background: #deebf6;
  border-color: #deebf6;
}

.emotion-10[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-10 svg {
  width: 26px;
  height: 26px;
  margin: 0;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 13px;
}

.emotion-12 {
  width: 27px;
  height: 27px;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-top: 13px;
}

<body
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div
      class="emotion-0"
    />
  </div>
  <div
    aria-hidden="true"
    class="emotion-1 emotion-2"
    data-aria-hidden="true"
    data-state="open"
    style="pointer-events: auto; opacity: 0;"
  />
  <div
    class="emotion-3 emotion-4"
  >
    <div
      aria-describedby="radix-11"
      aria-label="Pass på!"
      aria-labelledby="radix-10"
      class="emotion-5"
      data-margin="small"
      data-position="center"
      data-size="normal"
      data-state="open"
      id="radix-9"
      role="dialog"
      style="opacity: 0; transform: translateY(40px) translateZ(0); pointer-events: auto;"
      tabindex="-1"
    >
      <div
        class="emotion-6"
      >
        <div
          class="emotion-7 emotion-8"
          data-cy="modal-header"
        >
          <h1
            class="emotion-9"
          >
            Pass på!
          </h1>
          <button
            aria-label="Lukk"
            class="emotion-10"
            data-testid="closeAlert"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-icon"
              data-license="Apache License 2.0"
              data-source="Material Design"
              fill="currentColor"
              height="1em"
              preserveAspectRatio="xMidYMid meet"
              style="vertical-align: middle;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g>
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </g>
            </svg>
          </button>
        </div>
        <div
          class="emotion-11"
        >
          <svg
            aria-hidden="true"
            class="c-icon emotion-12"
            data-license="Apache License 2.0"
            data-source="Material Design"
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align: middle;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g>
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </g>
          </svg>
          Testmessage
        </div>
        <div
          class="emotion-13"
        />
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`Messages A message is removed if the modal is closed 2`] = `
.emotion-0 {
  position: fixed;
  width: 80%;
  max-width: 800px;
  top: 50px;
  left: 0;
  right: 0;
  z-index: 200;
  margin: 0 auto;
  display: none;
}

<body
  style=""
>
  <div>
    <div
      class="emotion-0"
    />
  </div>
</body>
`;

exports[`Messages A single message renders correctly 1`] = `
.emotion-0 {
  position: fixed;
  width: 80%;
  max-width: 800px;
  top: 50px;
  left: 0;
  right: 0;
  z-index: 200;
  margin: 0 auto;
}

.emotion-1 {
  position: fixed;
  inset: 0;
  background: rgba(1, 1, 1, 0.3);
  z-index: 100;
}

.emotion-3 {
  position: fixed;
  inset: 0;
  overflow: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  z-index: 100;
}

.emotion-5 {
  --margin: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  max-height: 85%;
  max-width: 95%;
  overflow-y: auto;
  background-color: #fff;
  padding-bottom: env(safe-area-inset-bottom);
  padding-top: env(safe-area-inset-top);
  padding-left: env(safe-area-inset-left);
  padding-right: env(safe-area-inset-right);
}

@media (min-width: 37.5625em) {
  .emotion-5[data-margin='small'] {
    --margin: 26px;
  }
}

.emotion-5[data-position='top'] {
  top: var(--margin);
  bottom: unset;
}

.emotion-5[data-position='bottom'] {
  bottom: var(--margin);
  top: unset;
}

.emotion-5[data-position='left'] {
  left: var(--margin);
  right: unset;
}

.emotion-5[data-position='right'] {
  right: var(--margin);
  left: unset;
}

.emotion-5[data-size='full'] {
  min-height: 100%;
  min-width: 100%;
  inset: 0;
}

.emotion-5[data-width='xsmall'],
.emotion-5[data-size='xsmall'] {
  width: 300px;
}

.emotion-5[data-width='small'],
.emotion-5[data-size='small'] {
  width: 500px;
}

.emotion-5[data-width='normal'],
.emotion-5[data-size='normal'] {
  width: 700px;
}

.emotion-5[data-width='large'],
.emotion-5[data-size='large'] {
  width: 1100px;
}

.emotion-5[data-width='full'] {
  width: 100%;
  min-width: 100%;
  left: 0;
  right: 0;
}

.emotion-5[data-height='xsmall'] {
  height: 300px;
}

.emotion-5[data-height='small'] {
  height: 500px;
}

.emotion-5[data-height='normal'] {
  height: 700px;
}

.emotion-5[data-height='large'] {
  height: 1100px;
}

.emotion-5[data-height='full'] {
  height: 100%;
  min-height: 100%;
  top: 0;
  bottom: 0;
}

.emotion-5[data-expands='true'] {
  width: unset;
  height: unset;
  max-width: 100%;
  max-height: 100%;
}

@media (max-width: 37.5625em) {
  .emotion-5 {
    min-width: 100%;
    min-height: 100%;
  }
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 26px;
  padding: 26px;
  background-color: #d1372e;
  color: white;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding: 26px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-7 h1 {
  margin: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 700;
  font-size: 22px;
  font-size: 1.2222222222222223rem;
  line-height: 1.2;
  color: #444;
}

.emotion-7 h1[lang='zh'],
.emotion-7 h1[lang='zh-Hans'],
.emotion-7 h1[lang='zh-Hant'] {
  font-size: calc(22px * 1.11);
  font-size: calc(1.2222222222222223rem * 1.11);
}

.emotion-7 h1 {
  color: #fff;
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0;
  color: #fff;
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6.5px;
  color: #20588f;
  background: #deebf6;
  border: 2px solid #deebf6;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4.333333333333333px 6.5px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #20588f;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6.5px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
  margin-left: auto;
  color: #fff;
  justify-self: flex-end;
}

.emotion-10:hover,
.emotion-10:focus-visible {
  color: #fff;
  background-color: #20588f;
  border-color: #20588f;
}

.emotion-10[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-10[lang='zh'],
.emotion-10[lang='zh-Hans'],
.emotion-10[lang='zh-Hant'] {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-10:hover,
.emotion-10:active,
.emotion-10:focus-visible {
  color: #20588f;
  background: #deebf6;
  border-color: #deebf6;
}

.emotion-10[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-10 svg {
  width: 26px;
  height: 26px;
  margin: 0;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 13px;
}

.emotion-12 {
  width: 27px;
  height: 27px;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-top: 13px;
}

<body
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div
      class="emotion-0"
    />
  </div>
  <div
    aria-hidden="true"
    class="emotion-1 emotion-2"
    data-aria-hidden="true"
    data-state="open"
    style="pointer-events: auto; opacity: 0;"
  />
  <div
    class="emotion-3 emotion-4"
  >
    <div
      aria-describedby="radix-2"
      aria-label="Pass på!"
      aria-labelledby="radix-1"
      class="emotion-5"
      data-margin="small"
      data-position="center"
      data-size="normal"
      data-state="open"
      id="radix-0"
      role="dialog"
      style="opacity: 0; transform: translateY(40px) translateZ(0); pointer-events: auto;"
      tabindex="-1"
    >
      <div
        class="emotion-6"
      >
        <div
          class="emotion-7 emotion-8"
          data-cy="modal-header"
        >
          <h1
            class="emotion-9"
          >
            Pass på!
          </h1>
          <button
            aria-label="Lukk"
            class="emotion-10"
            data-testid="closeAlert"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-icon"
              data-license="Apache License 2.0"
              data-source="Material Design"
              fill="currentColor"
              height="1em"
              preserveAspectRatio="xMidYMid meet"
              style="vertical-align: middle;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g>
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </g>
            </svg>
          </button>
        </div>
        <div
          class="emotion-11"
        >
          <svg
            aria-hidden="true"
            class="c-icon emotion-12"
            data-license="Apache License 2.0"
            data-source="Material Design"
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align: middle;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g>
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </g>
          </svg>
          Testmessage
        </div>
        <div
          class="emotion-13"
        />
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`Messages Several messages renders correctly 1`] = `
.emotion-0 {
  position: fixed;
  width: 80%;
  max-width: 800px;
  top: 50px;
  left: 0;
  right: 0;
  z-index: 200;
  margin: 0 auto;
}

.emotion-1 {
  position: fixed;
  inset: 0;
  background: rgba(1, 1, 1, 0.3);
  z-index: 100;
}

.emotion-3 {
  position: fixed;
  inset: 0;
  overflow: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  z-index: 100;
}

.emotion-5 {
  --margin: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  max-height: 85%;
  max-width: 95%;
  overflow-y: auto;
  background-color: #fff;
  padding-bottom: env(safe-area-inset-bottom);
  padding-top: env(safe-area-inset-top);
  padding-left: env(safe-area-inset-left);
  padding-right: env(safe-area-inset-right);
}

@media (min-width: 37.5625em) {
  .emotion-5[data-margin='small'] {
    --margin: 26px;
  }
}

.emotion-5[data-position='top'] {
  top: var(--margin);
  bottom: unset;
}

.emotion-5[data-position='bottom'] {
  bottom: var(--margin);
  top: unset;
}

.emotion-5[data-position='left'] {
  left: var(--margin);
  right: unset;
}

.emotion-5[data-position='right'] {
  right: var(--margin);
  left: unset;
}

.emotion-5[data-size='full'] {
  min-height: 100%;
  min-width: 100%;
  inset: 0;
}

.emotion-5[data-width='xsmall'],
.emotion-5[data-size='xsmall'] {
  width: 300px;
}

.emotion-5[data-width='small'],
.emotion-5[data-size='small'] {
  width: 500px;
}

.emotion-5[data-width='normal'],
.emotion-5[data-size='normal'] {
  width: 700px;
}

.emotion-5[data-width='large'],
.emotion-5[data-size='large'] {
  width: 1100px;
}

.emotion-5[data-width='full'] {
  width: 100%;
  min-width: 100%;
  left: 0;
  right: 0;
}

.emotion-5[data-height='xsmall'] {
  height: 300px;
}

.emotion-5[data-height='small'] {
  height: 500px;
}

.emotion-5[data-height='normal'] {
  height: 700px;
}

.emotion-5[data-height='large'] {
  height: 1100px;
}

.emotion-5[data-height='full'] {
  height: 100%;
  min-height: 100%;
  top: 0;
  bottom: 0;
}

.emotion-5[data-expands='true'] {
  width: unset;
  height: unset;
  max-width: 100%;
  max-height: 100%;
}

@media (max-width: 37.5625em) {
  .emotion-5 {
    min-width: 100%;
    min-height: 100%;
  }
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 26px;
  padding: 26px;
  background-color: #d1372e;
  color: white;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding: 26px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-7 h1 {
  margin: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 700;
  font-size: 22px;
  font-size: 1.2222222222222223rem;
  line-height: 1.2;
  color: #444;
}

.emotion-7 h1[lang='zh'],
.emotion-7 h1[lang='zh-Hans'],
.emotion-7 h1[lang='zh-Hant'] {
  font-size: calc(22px * 1.11);
  font-size: calc(1.2222222222222223rem * 1.11);
}

.emotion-7 h1 {
  color: #fff;
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0;
  color: #fff;
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6.5px;
  color: #20588f;
  background: #deebf6;
  border: 2px solid #deebf6;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4.333333333333333px 6.5px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #20588f;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6.5px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
  margin-left: auto;
  color: #fff;
  justify-self: flex-end;
}

.emotion-10:hover,
.emotion-10:focus-visible {
  color: #fff;
  background-color: #20588f;
  border-color: #20588f;
}

.emotion-10[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-10[lang='zh'],
.emotion-10[lang='zh-Hans'],
.emotion-10[lang='zh-Hant'] {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-10:hover,
.emotion-10:active,
.emotion-10:focus-visible {
  color: #20588f;
  background: #deebf6;
  border-color: #deebf6;
}

.emotion-10[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-10 svg {
  width: 26px;
  height: 26px;
  margin: 0;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 13px;
}

.emotion-12 {
  width: 27px;
  height: 27px;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-top: 13px;
}

<body
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div
      class="emotion-0"
    />
  </div>
  <div
    aria-hidden="true"
    class="emotion-1 emotion-2"
    data-aria-hidden="true"
    data-state="open"
    style="pointer-events: auto; opacity: 0;"
  />
  <div
    aria-hidden="true"
    class="emotion-3 emotion-4"
    data-aria-hidden="true"
  >
    <div
      aria-describedby="radix-6"
      aria-label="Pass på!"
      aria-labelledby="radix-5"
      class="emotion-5"
      data-margin="small"
      data-position="center"
      data-size="normal"
      data-state="open"
      id="radix-3"
      role="dialog"
      style="opacity: 0; transform: translateY(40px) translateZ(0); pointer-events: none;"
      tabindex="-1"
    >
      <div
        class="emotion-6"
      >
        <div
          class="emotion-7 emotion-8"
          data-cy="modal-header"
        >
          <h1
            class="emotion-9"
          >
            Pass på!
          </h1>
          <button
            aria-label="Lukk"
            class="emotion-10"
            data-testid="closeAlert"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-icon"
              data-license="Apache License 2.0"
              data-source="Material Design"
              fill="currentColor"
              height="1em"
              preserveAspectRatio="xMidYMid meet"
              style="vertical-align: middle;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g>
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </g>
            </svg>
          </button>
        </div>
        <div
          class="emotion-11"
        >
          <svg
            aria-hidden="true"
            class="c-icon emotion-12"
            data-license="Apache License 2.0"
            data-source="Material Design"
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align: middle;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g>
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </g>
          </svg>
          Testmessage
        </div>
        <div
          class="emotion-13"
        />
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="emotion-1 emotion-2"
    data-aria-hidden="true"
    data-state="open"
    style="pointer-events: auto; opacity: 0;"
  />
  <div
    aria-hidden="true"
    class="emotion-3 emotion-4"
    data-aria-hidden="true"
  >
    <div
      aria-describedby="radix-8"
      aria-label="Pass på!"
      aria-labelledby="radix-7"
      class="emotion-5"
      data-margin="small"
      data-position="center"
      data-size="normal"
      data-state="open"
      id="radix-4"
      role="dialog"
      style="opacity: 0; transform: translateY(40px) translateZ(0); pointer-events: auto;"
      tabindex="-1"
    >
      <div
        class="emotion-6"
      >
        <div
          class="emotion-7 emotion-8"
          data-cy="modal-header"
        >
          <h1
            class="emotion-9"
          >
            Pass på!
          </h1>
          <button
            aria-label="Lukk"
            class="emotion-10"
            data-testid="closeAlert"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-icon"
              data-license="Apache License 2.0"
              data-source="Material Design"
              fill="currentColor"
              height="1em"
              preserveAspectRatio="xMidYMid meet"
              style="vertical-align: middle;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g>
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </g>
            </svg>
          </button>
        </div>
        <div
          class="emotion-11"
        >
          <svg
            aria-hidden="true"
            class="c-icon emotion-12"
            data-license="Apache License 2.0"
            data-source="Material Design"
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align: middle;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g>
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </g>
          </svg>
          Testmessage2
        </div>
        <div
          class="emotion-13"
        />
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`Messages auth0 messages provides a cancel button 1`] = `
.emotion-0 {
  position: fixed;
  width: 80%;
  max-width: 800px;
  top: 50px;
  left: 0;
  right: 0;
  z-index: 200;
  margin: 0 auto;
}

.emotion-1 {
  position: fixed;
  inset: 0;
  background: rgba(1, 1, 1, 0.3);
  z-index: 100;
}

.emotion-3 {
  position: fixed;
  inset: 0;
  overflow: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  z-index: 100;
}

.emotion-5 {
  --margin: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  max-height: 85%;
  max-width: 95%;
  overflow-y: auto;
  background-color: #fff;
  padding-bottom: env(safe-area-inset-bottom);
  padding-top: env(safe-area-inset-top);
  padding-left: env(safe-area-inset-left);
  padding-right: env(safe-area-inset-right);
}

@media (min-width: 37.5625em) {
  .emotion-5[data-margin='small'] {
    --margin: 26px;
  }
}

.emotion-5[data-position='top'] {
  top: var(--margin);
  bottom: unset;
}

.emotion-5[data-position='bottom'] {
  bottom: var(--margin);
  top: unset;
}

.emotion-5[data-position='left'] {
  left: var(--margin);
  right: unset;
}

.emotion-5[data-position='right'] {
  right: var(--margin);
  left: unset;
}

.emotion-5[data-size='full'] {
  min-height: 100%;
  min-width: 100%;
  inset: 0;
}

.emotion-5[data-width='xsmall'],
.emotion-5[data-size='xsmall'] {
  width: 300px;
}

.emotion-5[data-width='small'],
.emotion-5[data-size='small'] {
  width: 500px;
}

.emotion-5[data-width='normal'],
.emotion-5[data-size='normal'] {
  width: 700px;
}

.emotion-5[data-width='large'],
.emotion-5[data-size='large'] {
  width: 1100px;
}

.emotion-5[data-width='full'] {
  width: 100%;
  min-width: 100%;
  left: 0;
  right: 0;
}

.emotion-5[data-height='xsmall'] {
  height: 300px;
}

.emotion-5[data-height='small'] {
  height: 500px;
}

.emotion-5[data-height='normal'] {
  height: 700px;
}

.emotion-5[data-height='large'] {
  height: 1100px;
}

.emotion-5[data-height='full'] {
  height: 100%;
  min-height: 100%;
  top: 0;
  bottom: 0;
}

.emotion-5[data-expands='true'] {
  width: unset;
  height: unset;
  max-width: 100%;
  max-height: 100%;
}

@media (max-width: 37.5625em) {
  .emotion-5 {
    min-width: 100%;
    min-height: 100%;
  }
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 26px;
  padding: 26px;
  background-color: #d1372e;
  color: white;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding: 26px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-7 h1 {
  margin: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 700;
  font-size: 22px;
  font-size: 1.2222222222222223rem;
  line-height: 1.2;
  color: #444;
}

.emotion-7 h1[lang='zh'],
.emotion-7 h1[lang='zh-Hans'],
.emotion-7 h1[lang='zh-Hant'] {
  font-size: calc(22px * 1.11);
  font-size: calc(1.2222222222222223rem * 1.11);
}

.emotion-7 h1 {
  color: #fff;
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0;
  color: #fff;
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6.5px;
  color: #20588f;
  background: #deebf6;
  border: 2px solid #deebf6;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4.333333333333333px 6.5px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #20588f;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6.5px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
  margin-left: auto;
  color: #fff;
  justify-self: flex-end;
}

.emotion-10:hover,
.emotion-10:focus-visible {
  color: #fff;
  background-color: #20588f;
  border-color: #20588f;
}

.emotion-10[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-10[lang='zh'],
.emotion-10[lang='zh-Hans'],
.emotion-10[lang='zh-Hant'] {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-10:hover,
.emotion-10:active,
.emotion-10:focus-visible {
  color: #20588f;
  background: #deebf6;
  border-color: #deebf6;
}

.emotion-10[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-10 svg {
  width: 26px;
  height: 26px;
  margin: 0;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 13px;
}

.emotion-12 {
  width: 27px;
  height: 27px;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-top: 13px;
}

.emotion-14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6.5px;
  color: #fff;
  background: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4.333333333333333px 13px;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  min-height: 40px;
  color: #20588f;
  background: transparent;
  border-color: #20588f;
  background-color: white;
  margin-left: 0;
}

.emotion-14:hover,
.emotion-14:focus-visible {
  color: #20588f;
  background-color: #ceddea;
  border-color: #ceddea;
}

.emotion-14[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-14[lang='zh'],
.emotion-14[lang='zh-Hans'],
.emotion-14[lang='zh-Hant'] {
  font-size: calc(16px * 1.11);
  font-size: calc(0.8888888888888888rem * 1.11);
}

.emotion-14:hover {
  color: #fff;
  background: #20588f;
  border-color: #20588f;
}

.emotion-14[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: #777777;
  cursor: not-allowed;
}

.emotion-14:only-child {
  margin-left: auto;
}

<body
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div
      class="emotion-0"
    />
  </div>
  <div
    aria-hidden="true"
    class="emotion-1 emotion-2"
    data-aria-hidden="true"
    data-state="open"
    style="pointer-events: auto; opacity: 0;"
  />
  <div
    class="emotion-3 emotion-4"
  >
    <div
      aria-describedby="radix-14"
      aria-label="Pass på!"
      aria-labelledby="radix-13"
      class="emotion-5"
      data-margin="small"
      data-position="center"
      data-size="normal"
      data-state="open"
      id="radix-12"
      role="dialog"
      style="opacity: 0; transform: translateY(40px) translateZ(0); pointer-events: auto;"
      tabindex="-1"
    >
      <div
        class="emotion-6"
      >
        <div
          class="emotion-7 emotion-8"
          data-cy="modal-header"
        >
          <h1
            class="emotion-9"
          >
            Pass på!
          </h1>
          <button
            aria-label="Lukk"
            class="emotion-10"
            data-testid="closeAlert"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-icon"
              data-license="Apache License 2.0"
              data-source="Material Design"
              fill="currentColor"
              height="1em"
              preserveAspectRatio="xMidYMid meet"
              style="vertical-align: middle;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g>
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </g>
            </svg>
          </button>
        </div>
        <div
          class="emotion-11"
        >
          <svg
            aria-hidden="true"
            class="c-icon emotion-12"
            data-license="Apache License 2.0"
            data-source="Material Design"
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align: middle;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g>
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <path
                d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </g>
          </svg>
          Testmessage
        </div>
        <div
          class="emotion-13"
        >
          <button
            class="emotion-14"
            type="button"
          >
            Avbryt
          </button>
          <button
            class="emotion-14"
            type="button"
          >
            Logg inn på nytt
          </button>
        </div>
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`Messages auth0 messages provides a cancel button 2`] = `
.emotion-0 {
  position: fixed;
  width: 80%;
  max-width: 800px;
  top: 50px;
  left: 0;
  right: 0;
  z-index: 200;
  margin: 0 auto;
  display: none;
}

<body
  style=""
>
  <div>
    <div
      class="emotion-0"
    />
  </div>
</body>
`;
